{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 78,
  "lineage": "de6ab331-ef89-dbf3-d083-aa03c330b893",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "deathstar_ec2_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06f1fc9ae5ae7f31e",
            "arn": "arn:aws:ec2:us-east-2:768132175775:instance/i-0fc45ef8e819efeb2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "deathstar-instance-profile01",
            "id": "i-0fc45ef8e819efeb2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f316a0e2fa44d68a"
              }
            ],
            "primary_network_interface_id": "eni-0f316a0e2fa44d68a",
            "private_dns": "ip-10-13-1-119.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.13.1.119",
            "public_dns": "ec2-18-218-11-243.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.11.243",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dd454deea8ad0586",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d25b9b0e284e3261",
            "tags": {
              "Name": "deathstar-ec2_01"
            },
            "tags_all": {
              "Name": "deathstar-ec2_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0ad2a3a78d665f2ad"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "i-0fc45ef8e819efeb2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_db_instance.deathstar_rds01",
            "aws_db_subnet_group.deathstar_rds_subnet_group01",
            "aws_iam_instance_profile.deathstar_instance_profile01",
            "aws_iam_role.deathstar_ec2_role01",
            "aws_security_group.deathstar_ec2_sg01",
            "aws_security_group.deathstar_rds_sg01",
            "aws_subnet.deathstar_private_subnets",
            "aws_subnet.deathstar_public_subnets",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "deathstar_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:internet-gateway/igw-06d5301d200e44d42",
            "id": "igw-06d5301d200e44d42",
            "owner_id": "768132175775",
            "region": "us-east-2",
            "tags": {
              "Name": "deathstar-igw01"
            },
            "tags_all": {
              "Name": "deathstar-igw01"
            },
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "deathstar_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d5301d200e44d42",
            "id": "r-rtb-0e73958d6f69475411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0e73958d6f6947541",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0e73958d6f6947541"
          },
          "dependencies": [
            "aws_internet_gateway.deathstar_igw01",
            "aws_route_table.deathstar_public_rt01",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "deathstar_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:route-table/rtb-01b867af512736ba1",
            "id": "rtb-01b867af512736ba1",
            "owner_id": "768132175775",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "deathstar-private-rt01"
            },
            "tags_all": {
              "Name": "deathstar-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "rtb-01b867af512736ba1",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "deathstar_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:route-table/rtb-0e73958d6f6947541",
            "id": "rtb-0e73958d6f6947541",
            "owner_id": "768132175775",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "deathstar-public-rt01"
            },
            "tags_all": {
              "Name": "deathstar-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "rtb-0e73958d6f6947541",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "deathstar_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace8dcced94fae27",
            "region": "us-east-2",
            "route_table_id": "rtb-01b867af512736ba1",
            "subnet_id": "subnet-0dbd35efefec01fa5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.deathstar_private_rt01",
            "aws_subnet.deathstar_private_subnets",
            "aws_vpc.deathstar_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dac0f9fddfe6b14e",
            "region": "us-east-2",
            "route_table_id": "rtb-01b867af512736ba1",
            "subnet_id": "subnet-01a2b42bfaaeb733d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.deathstar_private_rt01",
            "aws_subnet.deathstar_private_subnets",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "deathstar_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d9038ab86bcb49",
            "region": "us-east-2",
            "route_table_id": "rtb-0e73958d6f6947541",
            "subnet_id": "subnet-0d25b9b0e284e3261"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.deathstar_public_rt01",
            "aws_subnet.deathstar_public_subnets",
            "aws_vpc.deathstar_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0620c5989123cb280",
            "region": "us-east-2",
            "route_table_id": "rtb-0e73958d6f6947541",
            "subnet_id": "subnet-0ec97a258cc31eb77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.deathstar_public_rt01",
            "aws_subnet.deathstar_public_subnets",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "deathstar_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:security-group/sg-0ad2a3a78d665f2ad",
            "description": "EC2 app security group (HTTP)",
            "egress": [],
            "id": "sg-0ad2a3a78d665f2ad",
            "ingress": [],
            "name": "deathstar-ec2-lab",
            "name_prefix": "",
            "owner_id": "768132175775",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "deathstar-ec2-lab"
            },
            "tags_all": {
              "Name": "deathstar-ec2-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "sg-0ad2a3a78d665f2ad",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "deathstar_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:security-group/sg-0207f904f2f643bb0",
            "description": "RDS security group (MySQL from EC2 SG only)",
            "egress": [],
            "id": "sg-0207f904f2f643bb0",
            "ingress": [],
            "name": "arm-sg-rds-lab",
            "name_prefix": "",
            "owner_id": "768132175775",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arm-sg-rds-lab"
            },
            "tags_all": {
              "Name": "arm-sg-rds-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "sg-0207f904f2f643bb0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "deathstar_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:subnet/subnet-0dbd35efefec01fa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.13.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbd35efefec01fa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768132175775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "deathstar-private-1"
            },
            "tags_all": {
              "Name": "deathstar-private-1"
            },
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "subnet-0dbd35efefec01fa5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:subnet/subnet-01a2b42bfaaeb733d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.13.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a2b42bfaaeb733d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768132175775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "deathstar-private-2"
            },
            "tags_all": {
              "Name": "deathstar-private-2"
            },
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "subnet-01a2b42bfaaeb733d",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "deathstar_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:subnet/subnet-0d25b9b0e284e3261",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.13.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d25b9b0e284e3261",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768132175775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "deathstar-public-1"
            },
            "tags_all": {
              "Name": "deathstar-public-1"
            },
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "subnet-0d25b9b0e284e3261",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:subnet/subnet-0ec97a258cc31eb77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.13.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec97a258cc31eb77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768132175775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "deathstar-public-2"
            },
            "tags_all": {
              "Name": "deathstar-public-2"
            },
            "vpc_id": "vpc-0c19edcb9f58ad331"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "subnet-0ec97a258cc31eb77",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "deathstar_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:vpc/vpc-0c19edcb9f58ad331",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.13.0.0/16",
            "default_network_acl_id": "acl-00e221a395007ec6b",
            "default_route_table_id": "rtb-0e65b72ed0c1a0f45",
            "default_security_group_id": "sg-0b7a6dc5a1fb645af",
            "dhcp_options_id": "dopt-0d90805f889f765ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c19edcb9f58ad331",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e65b72ed0c1a0f45",
            "owner_id": "768132175775",
            "region": "us-east-2",
            "tags": {
              "Name": "deathstar-vpc01"
            },
            "tags_all": {
              "Name": "deathstar-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "vpc-0c19edcb9f58ad331",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "deathstar_ec2_sg_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:security-group-rule/sgr-075dde09523d9a9c6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-075dde09523d9a9c6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0ad2a3a78d665f2ad",
            "security_group_rule_id": "sgr-075dde09523d9a9c6",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "sgr-075dde09523d9a9c6",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.deathstar_ec2_sg01",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "deathstar_rds_sg_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:security-group-rule/sgr-0c1c0f3da9ab74cca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0c1c0f3da9ab74cca",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0207f904f2f643bb0",
            "security_group_rule_id": "sgr-0c1c0f3da9ab74cca",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "sgr-0c1c0f3da9ab74cca",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.deathstar_rds_sg01",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "deathstar_ec2_sg_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:security-group-rule/sgr-07f8325f1543e1b23",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07f8325f1543e1b23",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0ad2a3a78d665f2ad",
            "security_group_rule_id": "sgr-07f8325f1543e1b23",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "sgr-07f8325f1543e1b23",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.deathstar_ec2_sg01",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "deathstar_rds_sg_ingress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768132175775:security-group-rule/sgr-07ed5d7fd65f470da",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-07ed5d7fd65f470da",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ad2a3a78d665f2ad",
            "region": "us-east-2",
            "security_group_id": "sg-0207f904f2f643bb0",
            "security_group_rule_id": "sgr-07ed5d7fd65f470da",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "768132175775",
            "id": "sgr-07ed5d7fd65f470da",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.deathstar_ec2_sg01",
            "aws_security_group.deathstar_rds_sg01",
            "aws_vpc.deathstar_vpc01"
          ]
        }
      ]
    }
  ]
}